[gd_scene load_steps=12 format=3 uid="uid://h6r8fevibi5r"]

[ext_resource type="Script" path="res://gdscript/police.gd" id="1_j7mdt"]
[ext_resource type="Texture2D" uid="uid://dlwxlmosj2usg" path="res://Officer_sheet_boxed_0.png" id="2_06een"]

[sub_resource type="AtlasTexture" id="AtlasTexture_26ypd"]
atlas = ExtResource("2_06een")
region = Rect2(2, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_a86hx"]
atlas = ExtResource("2_06een")
region = Rect2(34, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_udqx4"]
atlas = ExtResource("2_06een")
region = Rect2(66, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tovh2"]
atlas = ExtResource("2_06een")
region = Rect2(98, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4fgc"]
atlas = ExtResource("2_06een")
region = Rect2(130, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_53hwi"]
atlas = ExtResource("2_06een")
region = Rect2(162, 34, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxw1e"]
atlas = ExtResource("2_06een")
region = Rect2(194, 34, 28, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccmqj"]
animations = [{
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26ypd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a86hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udqx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tovh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4fgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53hwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxw1e")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2j3l"]
radius = 91.0

[node name="pilicee" type="CharacterBody2D"]
script = ExtResource("1_j7mdt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(3.94405, 4.35591)
sprite_frames = SubResource("SpriteFrames_ccmqj")
animation = &"right"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_p2j3l")

[node name="press_e" type="Label" parent="."]
offset_left = -32.0
offset_top = -17.0
offset_right = 40.0
offset_bottom = 9.0
text = "PRESS  'E'"

[node name="say" type="Label" parent="."]
offset_left = -323.0
offset_top = -131.0
offset_right = 147.0
offset_bottom = -105.0
scale = Vector2(1.36348, 1.75219)
text = "เฮ้ คุณตอนกลางคืนแถวนี้มันอันตรายมากนะ ไห้ผมไปกับคุณหมอดีกว่า"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
